# hotels-manager

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: app-testing.yml
app/config/: asgi.py  celery.py  urls.py  utils.py  wsgi.py
app/config/settings/: base.py  prod.py  test.py
app/config/tests/: test_autodoc.py  test_celery.py  test_jwt.py
app/hotels/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  views.py
app/hotels/migrations/: 0001_initial.py  0002_hotel_is_active.py  0003_alter_hotel_name_alter_hotel_photo.py  0004_hotel_slug.py  0005_alter_hotel_slug.py  0006_alter_hotel_slug.py  0007_alter_hotel_location_alter_hotel_photo.py  0008_hotelchain.py  0009_hotelchain_description_alter_hotelchain_email_and_more.py  0010_alter_hotelchain_options_hotel_chain_and_more.py  0011_alter_hotel_related_hotels.py  0012_alter_hotelchain_slug.py  0013_alter_hotel_options_alter_hotelchain_options.py  0014_alter_hotel_chain_alter_hotel_is_active_and_more.py  0015_alter_hotel_photo.py  0016_alter_hotelchain_price_range_alter_hotelchain_title.py  0017_hotelchain_created_at_hotelchain_updated_at.py  0018_alter_hotelchain_title.py  0020_hotelupdate.py  (+4 more)
app/users/: admin.py  forms.py  managers.py  models.py  serializers.py
docker/prod/: Dockerfile  entrypoint.sh
docker/test/: Dockerfile
docs/: admin.md  docker_doc.md  production.md  task1.1.md  task1.md  task2.md
(+20 files in other folders)
